--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="description" content="Descripció de la nostra webapp.">
     <title>
       THE ATALIER OF DESING 
-   </title>
-   <link rel="stylesheet" href="index.css">
+    </title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/fontawesome.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/solid.min.css">
   </head>
  <body> 
-    <div id="superior">
-      CREATIVITY
+    <div id="superior"> class="seccio">
+      THE ATALIER OF DESING 
      </div>
     <div id="seccio_1" class="seccio">
       ESSENCE
@@ -24,8 +27,16 @@
     </div>
     <div id="seccio_4" class="seccio">
       HAPINNES 
+
     </div>
     <div id="menu">
+      <i class="fa-solid fa-house"></i>
+      <i class="fa-solid fa-image"></i>
+      <i class="fa-solid fa-magnifying-glass"></i>
+      <i class="fa-solid fa-bars"></i>
+      <i class="fa-solid fa-list"></i>
     </div>    
  </body>
 </html
+
+
